# hs2agda-plugin

./: .gitignore  CHANGELOG.md  HsPrelude.agda  README.md  cabal.project  hs2agda-plugin.cabal
app/: Main.hs
app/App/: Utils.hs
src/Hs2Agda/: Plugin.hs
src/Hs2Agda/Plugin/: CodeGen.hs  Scan.hs  TyClass.hs  Types.hs
test/: Hs2AgdaTest.hs
