cabal-version:      2.4
name:               hs2agda-plugin
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Filippo Sestini
maintainer:         sestini.filippo@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Hs2Agda.Plugin

    -- Modules included in this library but not exported.
    other-modules:    Hs2Agda.Plugin.CodeGen

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , ghc
                    , neat-interpolation
                    , text
                    , directory
                    , filepath
                    , split
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable hs2agda-plugin
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: App.Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        hs2agda-plugin

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hs2agda-plugin-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Hs2AgdaTest.hs
    build-depends:    base ^>=4.16.4.0
