cabal-version:      2.4
name:               hs2agda-plugin
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Filippo Sestini
maintainer:         sestini.filippo@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Hs2Agda.Plugin

    -- Modules included in this library but not exported.
    other-modules:    Hs2Agda.Plugin.CodeGen
                    , Hs2Agda.Plugin.TyClass
                    , Hs2Agda.Plugin.Scan
                    , Hs2Agda.Plugin.Types

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base < 4.19
                    , ghc
                    , neat-interpolation
                    , text
                    , directory
                    , filepath
                    , split
                    , containers
                    , mtl
                    , transformers
                    , extra
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hs2agda-plugin-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Hs2AgdaTest.hs
    build-depends:    base < 4.19
                    , hs2agda-plugin
